--- a/1.tex.md
+++ b/1.tex.md
@@ -1,4 +1,171 @@
-# Грамматика. Часть 4. Метод рекурсивного спуска.
+# Грамматика. Часть 4. Разбор грамматики.
 
-$T_1 + T_2 + ... + T_n$
+В этой части, мы разберем грамматику для построения наших выражений, представленных в предыдущих частях.
 
+В первой [части](https://github.com/i582/compiler-wiki/wiki/1.-Лексический-анализ.-Часть-1.-Понятие-токена.-Класс-'token'.) грамматики, мы разобрали правила построения грамматик, а так же была представлена грамматика для наших выражений.
+
+```cpp
+<program> ::= <statement>
+
+<statement> ::= <expression>
+
+<expression> ::= <additive_expression>
+
+<additive_expression> ::= <multiplicative_expression> 
+                        | <multiplicative_expression> "+" <additive_expression>
+                        | <multiplicative_expression> "-" <additive_expression>
+
+<multiplicative_expression> ::= <primary_expression> 
+                              | <primary_expression> "*" <multiplicative_expression>
+                              | <primary_expression> "/" <multiplicative_expression>
+
+<primary_expression> ::= <number> | <parenthesized_expression>
+
+<parenthesized_expression> ::= "(" <expression> ")"
+
+<number> ::= число
+```
+
+
+
+Давайте разберем эту грамматику по тем правилам.
+
+В первой строке `<program> ::= <statement>`  описано правило, по которому `program ` состоит из одного `statement`, то есть вся наша программа это один `statement`. (Во второй части было сказано, что `statement`  — это инструкции, таким образом можно сформулировать это предложение так: Программа — это одна инструкция).
+
+
+
+Во второй строке `<statement> ::= <expression>` описано правило, по которому `statement` состоит из одного `expression`, то есть вся инструкция, это одно выражение (так как мы рассчитываем одно выражение, то логично, что у нас вся инструкция, это всего лишь одно выражение).
+
+
+
+Если сложить эти две строки в одну, то мы получим следующее правило:
+
+```cpp
+<program> ::= <statement> ::= <expression>
+```
+
+Которое можно описать так, что программа, это одна инструкция, которая состоит из одного выражения, а отсюда следует, что программа, это одно выражение, то есть так, как и есть на самом деле (ведь у нас одно выражение, которое нам надо разобрать).
+
+
+
+Таким образом, начинает складываться логика, описываемая этой грамматикой.
+
+Рассмотрим следующую строку `<expression> ::= <additive_expression>`. В ней сказано, что выражение, это выражение вида `a +/- b`. Это означает, что выражение, которое мы разбираем, может быть представлено в общем виде, как `A + B`, где `A` и `B` представляют собой другие выражения.
+
+Для понимания, давайте рассмотрим следующее правило:
+
+```cpp
+<additive_expression> ::= <multiplicative_expression> 
+                        | <multiplicative_expression> "+" <additive_expression>
+                        | <multiplicative_expression> "-" <additive_expression>
+```
+
+Оно несколько сложнее предыдущих, но не на много. Как мы помним, `|` обозначает `или`, таким образом, `additive_expression` может переходить, либо в `multiplicative_expression`, либо в `<multiplicative_expression> "+" <additive_expression>`, либо в `<multiplicative_expression> "-" <additive_expression>`.
+
+Для понимания того, что это правило описывает, давайте пройдем дальше по правилам, а потом вернемся.
+
+Следующее правило:
+
+```cpp
+<multiplicative_expression> ::= <primary_expression> 
+                              | <primary_expression> '*' <multiplicative_expression>
+                              | <primary_expression> '/' <multiplicative_expression>
+```
+
+Которое можно описать, как то, что  `multiplicative_expression` может переходить, либо в `primary_expression`, либо в `<primary_expression> "+" <multiplicative_expression>`, либо в `<primary_expression> "-" <multiplicative_expression>`.
+
+Скажем, что `multiplicative_expression`, это выражение вида `a * или / b`, а так же будем называть его выражением умножения.
+
+
+
+Давайте пойдем еще дальше.
+
+Следующее правило:
+
+```cpp
+<primary_expression> ::= <number> | <parenthesized_expression>
+```
+
+Оно уже немного проще, так `primary_expression` может быть либо числом, либо выражением в скобках.
+
+Следующее правило описывает, как строится выражения в скобках:
+
+```cpp
+<parenthesized_expression> ::= "(" <expression> ")"
+```
+
+То есть, это просто выражение, обернутое в скобки.
+
+Теперь, давайте возвращаться назад к правилу:
+
+```cpp
+<multiplicative_expression> ::= <primary_expression> 
+                              | <primary_expression> '*' <multiplicative_expression>
+                              | <primary_expression> '/' <multiplicative_expression>
+```
+
+Теперь, мы знаем, что `primary_expression` это либо число, либо выражение в скобках. Тогда мы можем описать это правило так, что `multiplicative_expression`, это, либо число, либо выражение в скобках, либо число умноженное (или разделенное) на число, либо на выражение в скобках.
+
+Это можно описать, как 3 правила:
+
+1. $P$
+
+2. $P \cdot F$
+
+3. $P / F$
+
+где $P$ — описывает простое выражение (число или выражение в скобах), а $F$ — выражения составленные, либо из одного числа, либо, как выражение в скобках, то есть, это означает, что $F$ может быть, опять же, одним из трех вариантов выше, таким образом возникает рекурсия, в которой $F$ переходит в одно из 3 возможных вида, до тех пор, пока не перейдет в вид $P$, на котором эта рекурсия закончится.
+
+Теперь вернемся на еще один шаг к правилу:
+
+```cpp
+<additive_expression> ::= <multiplicative_expression> 
+                        | <multiplicative_expression> "+" <additive_expression>
+                        | <multiplicative_expression> "-" <additive_expression>
+```
+
+Теперь мы знаем, что `multiplicative_expression` это выражения вида $P$ или $P * F$ или $P / F$. Тогда мы можем вывести следующие правила, как и с умножением:
+
+1. $F$
+2. $F + T$
+3. $F - T$
+
+где $F$ описывает выражения умножения, а $T$ — выражения составленные, либо из одного выражения вида умножения, либо из выражения умножения плюс выражения сложения, либо из выражения умножения минус выражение сложения. Здесь вновь возникает рекурсия, так в $F + T$  (и в $F - T$), $T$ может переходить в одно из состояний выше и так до тех пор, пока не перейдет в $F$, где эта рекурсия закончится, но начнется рекурсия у $F$.
+
+То есть $F + T$ может перейти в  $F + F + T$ или в $F + F - T$ или в $F + F$ (не забывайте, что в примерах с плюсом, так же может быть и минус (так же и умножение и деление)) и так далее.
+
+
+
+Давайте подумаем, у нас есть выражение вида $F + T$, где $F$ может быть в 3 состояниях. Допустим $F$ переходит в $P * F$, тогда наша формула будет иметь вид $P * F + T$, а здесь $F$ перейдет в $P$, тогда мы получим $P_1 * P_2 + T$. Такими преобразованиями, мы получили формулу, описывающую умножение двух чисел плюс какое-то выражение сложения. Давайте скажем, что $T$ переходит в $F - T$, тогда формула будет иметь вид $P_1 * P_2 + F - T$,  а здесь $F$ переходит в $P$, а $T$  в $F$, который переходит в $P$. Таким образом мы получим формулу вида  $P_1 * P_2 + P_3 - P_4$ мы получили формулу, которая почти описывает выражение, однако, $P$ может быть не только числом, но и выражением в скобках, сейчас, для простоты, скажем, что $P$ переходит в $C$, где $C$ — это число. Тогда мы получим формулу вида $C_1 * C_2 + C_3 - C_4$. 
+
+Мы получили формулу и эта формула описывает какое-то выражение, мы использовали случайные правила и в итоге получили случайное выражение, но, если применять эти правила в зависимости от текущего состояния, мы можем составить любое нужное нам выражение.
+
+Давайте вернемся, еще на один шаг, к правилу:
+
+```cpp
+<expression> ::= <additive_expression>
+```
+
+Оно нам понадобится, так как простое выражение может быть не только числом, но и выражением в скобках:
+
+```cpp
+<primary_expression> ::= <number> | <parenthesized_expression>  
+```
+
+Как видно из правила, простое выражение может быть либо числом, либо выражением в скобках, выражение в скобках описывается следующим правилом:
+
+```cpp
+<parenthesized_expression> ::= "(" <expression> ")"
+```
+
+Так, первым должна идти скобка, потом идет выражение, я потом идет закрывающаяся скобка. Здесь `expression`  описывает выражение, а мы в самом начале сказали, что выражение переходит в выражение сложения:
+
+```cpp
+<expression> ::= <additive_expression>
+```
+
+Таким образом, выражение в скобках, это еще одно выражение, которое может быть составлено по вышеописанным правилам, что означает, что для выражения в скобках мы должны вновь пройти по всем этим правилам.
+
+
+
+На этом эта часть закончена.
